--- a/projektbericht/main.tex
+++ b/projektbericht/main.tex
@@ -243,34 +243,47 @@ Wo kommen diese Daten her?
 %Open Philology-Project letzten Jahres. Bei Omeka einloggen um Infos detailiert zu sehen. Falls dort nicht zu sehen, SOFORT THOMAS BESCHEIDGEBEN!
 
 \subsection{Produkteinsatz / Erwartete Userbasis}
-Aus diesen Überlegungen schlussfolgernd sehen wir einen plausiblen Weg der Umsetzung des Projektes im Citizen Science Paradigma.
-Es werden Freiwillige benötigt, die ein persönliches Interesse daran haben, am Foranschreiten und dem Erfolg des Projektes mitzuwirken.
+Ausgehend von der Motivation des Projektes sehen wir den vielversprechendsten Weg der Umsetzung logischerweise im Citizen Science Paradigma.
+Es werden Freiwillige benötigt, die ein persönliches Interesse darin haben, an der Entwicklung und dem Erfolg des Projektes mitzuwirken.
 Unsere Aufgabe ist es, nicht nur eine Plattform zur Verfügung zu stellen, auf der die entsprechende Arbeit verrichtet werden kann,
-sondern auch für Nutzer einen Anreiz zur Aufnahme der Arbeit bzw. zum Weiterarbeiten zu schaffen.\\
-Wir haben uns dafür entschieden, sowohl den technischen als auch den sozialen Weg zu gehen, um ein möglichst großes Publikum anzusprechen.
-So haben wir technische Anreize beispielsweise über auf der Seite veröffentlichte Bestenlisten realisiert, oder durch aussagekräftige,
-optisch ansprechende Statistiken über den User selbst. Die Realisierung technischer Anreize und Funktionen, 
-die sich für den einzelnen Nutzer belohnend anfühlen, bietet ein großes Spektrum an Möglichkeiten.
+sondern auch für Nutzer einen Anreiz zur Aufnahme der Arbeit bzw. zum Weiterarbeiten zu schaffen.
+Dies kann auf technischem oder sozialem Weg erreicht werden.
+Wir haben uns dafür entschieden, beide Wege zu nutzen, um ein möglichst großes Publikum anzusprechen.
+So haben wir technische Anreize beispielsweise über auf der Seite veröffentlichte Bestenlisten realisiert, oder durch einfache,
+schön anzuschauende Statistiken der User selbst. Die Realisierung technischer Anreize und Funktionen, die sich für Nutzer belohnend anfühlen,
+bietet ein großes Spektrum an Möglichkeiten.
 Leider ist gerade dieses Thema jedoch eines, das eher nach Hinten verschoben werden musste,
-da es unter Beachtung unseres Zeitrahmens nach der Umsetzung der Basisfunktionalität ein zweitrangiges Ziel darstellt.
-Deswegen ist an dieser Stelle auch nur die oben genannten Funktionen aufgebaut worden.\\
-Wichtig sind jedoch auch die nicht-technischen Anreize; diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
+da es unter Beachtung unseres Zeitrahmens nach der Basisfunktionalität ein zweitrangiges Ziel darstellt.
+Deswegen ist an dieser Baustelle auch nur die bisher beschriebene Menge an Funktionen aufgebaut worden.%beschrieben wo genau? FIXME
+
+Wichtig sind jedoch auch die nicht-technischen Anreize.
+Diese müssen vielen Nutzern jedoch erst vor Augen geführt werden.
 Bedenkt man die Fülle an Datenmaterial, welches wir zur Verfügung stellen, so ist es kaum vorstellbar,
-dass ein einziger Nutzer mit vertrebaren Zeitaufwand alle Dokumente transkribieren kann.
+dass ein einziger Nutzer mit vertrebarem Zeitaufwand alle Dokumente transkribieren kann.
 Diese Arbeitsleistung wird erst dadurch möglich, dass eine größere Gemeinschaft sich der Aufgabe annimmt.
 Im Umkehrschluss bedeutet das aber auch, dass man die Ergebnisse anderer Nutzer sehen und von ihnen lernen könnte.
 Jeder, der am Projekt teilnimmt, tut dies mit großer Sicherheit aus dem Grund,
-dass er ein gewisses Interesse und Wissen z.B. in dem Gebiet der lateinischen Handschriften hat, und dieses teilen oder vergrößern möchte.
+dass er ein gewisses Interesse und Wissen in dem Gebiet hat, und dieses teilen oder vergrößern möchte.
 Unsere Plattform bietet diesen zwei Interessentengruppen genau das.
-Auch wenn ein Nutzer kaum Vorwissen im Transkribieren oder in Bezug auf lateinischer Schrift hat, kann er viel zum Projekt beitragen,
-im Verlauf dieser Arbeit sich dieses Wissen aneignen und im gleichen Atemzug anwenden.
-Außerdem schaffen wir damit die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft anzuschließen und 
-innerhalb dieser austauschen zu können.\\
-Aus diesen Überlegungen abgeleitet erwarten wir, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
+Selbst wenn also ein Nutzer kaum nutzbares Wissen hat, so kann unsere Plattform doch auch für ihn profitabel sein.
+Er könnte dadurch mehr lernen, und unter Umständen dieses neu erworbene Wissen im gleichen Atemzug anwenden.
+Unsere Nutzergemeinschaft lebt also letzten Endes davon, dass jeder seine eigenen Wissensfetzen mitbringt
+und jeder von den anderen lernen kann und somit etwas Gutes für sich und für den wissenschaftlichen Erkenntnisgewinn tut.%etwas Gutes zu subjektiv. FIXME
+Wenn wir diese Erkenntnis vermitteln können, dann ist auch damit ein großer Anreiz geschaffen.
+Außerdem schaffen wir die Möglichkeit, sich in einer interessenbezogenen Gemeinschaft austauschen zu können.
+
+Bedenken wir die Motivation, die für einen Benutzer geschaffen wird, so ergibt sich auch ein gewisses Bild von der Zielgruppe, die wir anzusprechen versuchen.
+Natürlich wird niemand ausgeschlossen, der Interesse an der Arbeit hat und soll mittels Tutorial an die Aufgabe herangeführt werden.
+Doch wir erwarten, dass der größte Teil unserer Teilnehmer sich aus einem Publikum zusammensetzt,
 das zumindest einen Bezug zur Wissenschaft und der lateinischen Sprache hat.
-Das betrifft vorwiegend Geistes- sowie Sprachwissenschaftler. Auch geschichtsinteressiertes Publikum wird erwartet,
+Das betrifft vorwiegend Geistes- sowie Sprachwissenschaften. Auch geschichtsinteressiertes Publikum wird erwartet,
 ebenso wie Teilnehmer, die einfach ein persönliches, nicht-wissenschaftliches Interesse an altertümlicher Sprache besitzen.
-Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen, welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
+Das steckt weitestgehend unsere Erwartungen ab, wobei es durchaus interessant wäre, in einem späteren Stadium einmal eine Umfrage zu starten, um zu sehen,
+welchen Bezug die Nutzer zu unserem Projekt haben. Mit diesem Wissen könnten eventuell weitere Anreize eingebracht werden.
+
+%TODO SO FAR
+%Rückbezug zur Einordnung unserer Software in die entsprechende Kathegorie von Citizen Science.
+%Warum sollen sich Nutzer registrieren?
 
 \section{Produktfunktion}
 Dass Nutzer sich planmäßig auf unterschiedlichen Wegen an der Arbeit beteiligen können sollten wurde bereits in unseren Zielen angerissen.
@@ -322,32 +335,6 @@ Durch die zeitliche Begrenzung des Projektes werden entsprechende offene Baustel
 %Welche Arbeitsabläufe gibt es?
 
 \section{Architektur}
-\subsection{Gesamtübersicht}
-Wir wollen diesen Abschnitt nutzen, um eine Übersicht darüber zu geben,
-wie die einzelnen Komponenten der TranscriptionDesk Software zusammen arbeiten.
-In Abbildung \ref{fig:components} haben wir dafür die minimal notwendigen Systeme,
-den TranscriptionDesk Server, den Omeka Server ,,Homer'', und einen Client Browser abgebildet
-und mittels Pfeilen markiert, welche Komponenten mit welchem System in Verbindung stehen.
-\\\begin{figure}[H]
-\includegraphics[width=\textwidth]{../notes/components.pdf}
-\caption{Diagramm einzelner Komponenten der TranscriptionDesk Website}
-\label{fig:components}
-\end{figure}
-Auf dem Homer Server ist eine Instanz der Omeka\footnote{\url{http://omeka.org/}} Software installiert.
-Innerhalb dieser Instanz werden die Scans verwaltet und anderen Teilnehmern im Internet bereitgestellt.
-Um Informationen über einzelne Scans, deren Metadaten und Sammlungen von Scans verfügbar zu machen,
-stellt Omeka eine eigene API bereit, von der wir mittels der PHP Omeka komponente in regelmäßigen Zeitabständen Daten sammeln.\\
-Die auf der TranscriptionDesk-Installation laufende MySQL Datenbank dient als Speicherplatz für alle eingehenden Informationen,
-sie wird gegenüber dem Rest der Website durch die PHP DB Logic Komponente gekapselt,
-die aus einer Reihe von Klassen besteht, deren Aufgabe es ist,
-Teile der domänenspezifischen Logik und Queries an die Datenbank zusammenzufassen
-und für den Rest des PHP codes verwendbar zu machen.\\
-Aufgabe der PHP Website Logic ist es, aus den vorliegenden Informationen ein Website zusammen zu setzen
-und den zu verwendenden JavaScript Code sowie von uns genutzte Teile des Bootstrap frameworks in die Website einzubetten.
-Bootstrap und JavaScript sind hier als getrennte Komponenten dargestellt,
-da sie sich prinzipiell auch auf andere Server verschieben lassen.\\
-Zum Anzeigen von Scans auf dem Clientgerät baut der Client neben der Verbindung zum TranscriptionDesk Server auch eine Verbindung zu Omeka auf,
-um die anzuzeigenden Scans zu erhalten.
 \subsection{Verwendete Technologien}
 In diesem Abschnitt werden die Technologien erläutert,
 die zum realisieren der TranscriptionDesk Website genutzt wurden.
@@ -371,7 +358,8 @@ läuft. Systemd ist ein neuerer System- und Servicemanager für Linux,
 den wir uns im speziellen zu nutze machen,
 um mittels timer in regelmäßigen Zeitabständen
 ein PHP script auszuführen,
-das Daten von Omeka zu sammelt.
+dass Daten von Omeka zu sammelt.%FIXME Gesamtübersicht vor Technologien, wegen Omeka?
+
 Innerhalb unseres Vagrantsetups betreiben wir einen LAMP-Stack\footnote{\url{https://en.wikipedia.org/wiki/LAMP_(software_bundle)}},
 das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnote{
     \url{https://httpd.apache.org/}
@@ -380,14 +368,16 @@ das heißt, dass wir die weit verbreitete Kombination von Linux, Apache2\footnot
     \url{https://en.wikipedia.org/wiki/MySQL}} und PHP\footnote{
     \url{https://secure.php.net/}
     \url{https://en.wikipedia.org/wiki/PHP}} nutzen.
+
 Basierend auf dieser serverseitigen Installation liefern wir eine Website an die Browser der Nutzer aus,
 die JavaScript\footnote{
     \cite{Flanagan},
-    \url{https://en.wikipedia.org/wiki/JavaScript}} enthält, das es uns ermöglicht,
+    \url{https://en.wikipedia.org/wiki/JavaScript}} enthält, dass es uns ermöglicht,
 erweiterte Funktionalitäten im Browser bereit zu stellen,
 und so komplexere Aufgaben wie das Markieren von Areas of Interest
-auf einer angenehmen Oberfläche zu präsentieren.
+in einer Angenehmen Oberflächte zu präsentieren.
 Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
+
 \begin{description}
 \item[jQuery:]
     Bei jQuery\footnote{\url{https://jquery.com/}} handelt es sich um eine beliebte JavaScript Bibliothek,
@@ -404,21 +394,61 @@ Dabei greifen wir auf unterschiedliche JavaScript Bibliotheken zurück:
     DESCRIBE ME!
 \item[bootbox:]
     DESCRIBE ME!
+\item[Require.js:]
+    DESCRIBE ME!
 \end{description}
+
+\subsection{Gesamtübersicht}
+Wir wollen diesen Abschnitt nutzen, um ein Bild darüber zu geben,
+wie die einzelnen Komponenten der TranscriptionDesk Software zusammen arbeiten.
+In Abbildung \ref{fig:components} haben wir dafür die minimal notwendigen Systeme,
+den TranscriptionDesk Server, den Omeka Server Homer, und einen Client Browser, abgebildet,
+und mittels Pfeilen markiert, zu welche Komponenten mit welchem System in Verbindung stehen.
+\\\begin{figure}[H]
+\includegraphics[width=\textwidth]{../notes/components.pdf}
+\caption{Diagramm einzelner Komponenten der TranscriptionDesk Website}
+\label{fig:components}
+\end{figure}
+
+Auf dem Server Homer ist eine Instanz der Omeka\footnote{\url{http://omeka.org/}} software installiert.
+Innerhalb dieser Instanz werden die Scans verwaltet, und anderen Teilnehmern im Internet bereit gestellt.
+Um Informationen über einzelne Scans,
+deren Metadaten, und Sammlungen von Scans verfügbar zu machen,
+stellt Omeka eine eigene API bereit,
+von der wir mittels der PHP Omeka komponente in regelmäßigen Zeitabständen Daten sammeln.
+
+Die auf der TranscriptionDesk-Installation laufende MySQL Datenbank dient als Speicherplatz für alle anfallenden Informationen,
+sie wird gegenüber dem Rest der Website durch die PHP DB Logic Komponente gekapselt,
+die aus einer Reihe von Klassen besteht, deren Aufgabe es ist,
+Teile der domänenspezifischen Logik und Queries an die Datenbank zusammenzufassen
+und für den Rest des PHP codes verwendbar zu machen.
+
+Aufgabe der PHP Website Logic ist es,
+aus den vorliegenden Informationen ein Website zusammen zu setzen,
+und den zu verwendenden JavaScript code sowie von uns genutzte Teile des Bootstrap frameworks in die Website einzubetten.
+Bootstrap und JavaScript sind hier als getrennte Komponenten dargestellt,
+da sie sich prinzipiell auch auf andere Server verschieben lassen.
+
+Zum Anzeigen von Scans auf dem Clientgerät baut der Client neben der Verbindung zum TranscriptionDesk Server auch eine Verbindung zu Omeka auf Homer auf,
+um die anzuzeigenden Scans zu erhalten.
+
 \subsection{Datenbank}
 In diesem Abschnitt widmen wir uns dem Aufbau der Datenbank.
 Da wir mit MySQL eine relationale Datenbank einsetzen,
 werden anfallende Daten auf einzelne Tabellen verteilt gespeichert,
 die zueinander in Relation stehen.
+
 \begin{figure}[H]
 \includegraphics[width=\textwidth]{../notes/ER.pdf}
 \caption{Entity-Relationship Diagramm der Datenbank}
 \label{fig:er}
 \end{figure}
+
 Wie dem Entity-Relationship Diagramm in Abbildung \ref{fig:er} entnommen werden kann,
-gibt es in unserer Datenbank 5 grundlegende Tabellen,
+gibt es in unserer Datenbank 5 Grundlegende Tabellen,
 und 4 weitere Tabellen,
 die $n:m$ Relationen zwischen diesen realisieren.
+
 \begin{description}
 \item[omekaItems:]
     Die Tabelle omekaItems wird von einem systemd timer,
@@ -429,7 +459,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     speichern wir dafür sowohl die URL,
     als auch die zugehörige URN jedes Items.
     Um Aufschluss darüber zu haben,
-    ob und welchem Besuchern wir bestimmte Datensätze anzeigen dürfen,
+    ob und welchen Besuchern wir bestimmte Datensätze anzeigen dürfen,
     hat jeder Datensatz Booleans in den Feldern public und featured.
     Die von diesen Feldern abgeleitete Zugriffslogik sieht wie folgt aus:
 
@@ -451,7 +481,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     Zusätzlich gibt es das Feld scanDataJSON,
     in dem Metadaten zum Scan gesammelt werden.
     Dazu zählen etwa die unterschiedlichen Auflösungen,
-    in denen ein Scan verfügbar ist
+    in denen ein Scan verfügbar ist,
     oder das Dateiformat des Scans.
 \item[areasOfInterest:]
     Alle von Nutzern der TranscriptionDesk Website markierten Areas of Interest werden in der areasOfInterest Tabelle gespeichert.
@@ -461,7 +491,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     gibt es in dieser Tabelle die Felder typeEnum und typeText.
 \item[transcriptions:]
     Die transcriptions Tabelle ordnet jeder Area of Interest eine Transcription im Markdown format zu,
-    sowie den Zeitstempel des Speicherns und eine eindeutige URN, die von der der zugehörigen Area of Interest abgeleitet wird.
+    sowie den Zeitstempel des speicherns und eine eindeutige URN, die von der der zugehörigen Area of Interest abgeleitet wird.
 \item[users:]
     Um Nutzern die Registerierung zu ermöglichen,
     sowie eine einfache Rechteverwaltung zu etablieren,
@@ -483,6 +513,7 @@ die $n:m$ Relationen zwischen diesen realisieren.
     haben die jeweiligen Tabellen Felder,
     die auf einen Eintrag in der users Tabelle verweisen.
 \end{description}
+
 Neben diesen grundlegenden Tabellen sind 3 weitere Tabellen hervorzuheben:
 Die Tabellen aoiCompleteness, scanCompleteness und transcriptionCompleteness
 realisieren Abstimmungen über die Vollständigkeit der jeweiligen Areas of Interest, Transkriptionen, und scans.
@@ -497,25 +528,285 @@ Stimmt ein als Administrator markierter Nutzer ab,
 so wird dessen Stimme sofort als Entscheidung gewertet.
 
 \section{Projektverlauf}
-In diesem Abschnitt möchten wir den Verlauf unseres Projektes von den ersten Treffen bis hin zum finalen Stand kurz skizzieren.
-Wir möchten dabei vor allem auf Schwierigkeiten eingehen und die unterwegs aufgetretenen Probleme sowie die Designentscheidungen genauer betrachten. \\
-Ausgehend von unseren bereits erwähnten Zielen waren wir zu Beginn in der Lage, notwendige Technologien abzuschätzen. 
-Dabei legten wir viel Wert auf die Auslagerung von Funktionen auf Dienste, welche die benötigte Funktionalität bereits implementiert haben und
-zur Verfügung stellen und stellten fest, welche Frameworks und Sprachen wir benötigen würden. 
-Danach legten wir die groben Entwicklungsetappen fest, welche bereits in Form unserer drei Meilensteine unter Punkt 3.1. Erwähnung fanden. 
-Die Meilensteine hatten allerdings nicht von Anfang an diese Form. 
-Nur den ersten Meilenstein konnten wir zu diesem Zeitpunkt bereits klar abgrenzen. 
-Uns war klar, dass auch mindestens ein zweiter Meilenstein von Nöten wäre. 
-Dieser hatte zu diesem Zeitpunkt allerdings kaum konkrete Ziele, und 
-die Entstehung eines dritten Meilensteines war zu diesem Zeitpunkt weder angedacht noch ausgeschlossen worden. 
-Zwischenzeitlich wurde sogar ein vierter Meilenstein geplant, doch unser erster Meilenstein erfüllte letzten Endes mehr Anforderungen als geplant, so dass sich die Planung nach hinten wieder anders gestaltete.
-Wir wussten zu Beginn, dass die Scans auf einem Fileserver liegen, was aus rechtlichen Gründen aber nicht so bleiben sollte. An diesem Punkt gab es noch keine konkrete Antwort auf die Frage, von wo wir die Bilder beziehen, und wie wir entsprechend darauf zugreifen könnten. Außerdem waren wir uns schon einig, dass wir, in Anlehnung an das Homer-Multitext-Projekt, ebenfalls Areas of Interest verwenden möchten, welche im dortigen Projekt als ,,Regions of Interest'' bezeichnet werden. Wir waren uns auch einig, dass Rechtecke die optimale Form wären, um diese Regionen zu markieren, wussten nur noch nicht mit Sicherheit, inwelcher Form wir diese Umsetzen und abspeichern sollten. Unser Favorit war die Variante, dass Rechtecke nur parallel zu den Seiten verlaufen könnten und man lediglich zwei Punkte, oder einen Punkt sowie Höhe und Breite abspeichern müsste. Nach kurzer Bedenkzeit entschieden wir uns für die zuletzt genannte Variante. Außerdem waren wir schon zu Beginn darüber im Bilde, dass Nutzer sich in irgendeiner Form Registrieren können sollten, und dass dies eine Voraussetzung wäre, um auf die Daten zugreifen zu können. Deswegen war die Login-Routine eine der ersten beschlossenen Funktionen. Außerdem war ebenfalls klar, dass Arbeit nur im eingeloggten Zustand verrichtet werden darf. \\
-Eine Woche später kam Omeka als Server für unsere Bilddateien ins Gespräch. Dort sollten wir einen Contributor-Nutzerzugang bekommen um über diesen Zugang zu den Scans zu erhalten. Schnell stellte sich auch die Frage, ob wir ein Omeka-Plugin bauen müssten, oder ob es hierfür bereits implementierte Instrumente gäbe, deren Verwendung für uns in Frage kommt. Noch am selben Tag entschlossen wir uns dazu, für die Anmeldung einen Authentication Provider zu verwenden. \\
-Am 19. Juni gab es das nächste Zusammenkommen. Dort diskutierten wir, welche Informationen wir von Omeka beziehen müssten. Unsere Antwort darauf bestand aus Items sowie Metadaten. Dazu gehören unter anderem auch Copyrights und die Sammlungen, zu denen die jeweiligen Scans gehören. Wir entschieden uns, mit den Tags ,,Public'' und ,,Featured'' so zu verfahren, das erstere auch nicht eingeloggten Nutzern auf unserer Plattform angezeigt werden dürften, während Featured Scans lediglich für eingeloggte Nutzer angezeigt werden dürften. Scans, die weder Featured noch Public Tags aufweisen, würden wir behandeln, als existierten sie nicht, und sie entsprechend auch keinem Nutzer anzeigen. Für unsere Datenbank entschieden wir, dass alles mögliche einen Zeitstempel aufweisen dürfte, und es demnach auch tun sollte. Außerdem entschieden wir, dass wir unsere um die Area of Interest erweiterten Cite URNs zusätzlich hinten um den Nutzernamen, einen Zeitstempel, sowie die Endung .md erweitern wollen. Zu diesem Zeitpunkt legten wir unseren ersten Meilenstein auf Github an und hakten bereits die Issues der ersten Phase als erledigt ab. Dazu gehörten die Mockups der Datenbank, des Interfaces sowie des Omeka Service Providers. Auch der Registrationsprozess gehörte dazu, während wir hier noch überlegten, wie wir vermeiden könnten, Passwörter auf unserer eigenen Datenbank abspeichern zu müssen. \\
-Am 24. Juni war der Stand unserer Arbeit so, dass wir bereits Scans aus Omeka lesen und diese, sowie entsprechende Thumbnails, anzeigen konnten. Am selben Tag begannen wir damit, das bereits vorgestellte ER-Diagramm für die Datenbank anzulegen. Wir klärten auch ab, dass Nutzer die Möglichkeit haben sollten, die Interest Maps anderer Nutzer editieren zu können. Das editierte Ergebnis sollte als neue Interest Map abgespeichert werden, anstatt das Original zu überschreiben. Eine Frage, zu diesem Datum ungeklärte Frage befasste sich damit, ob wir eine Referenzkette bilden sollten, welche es möglich macht, die Bearbeitungsgeschichte zurück zu verfolgen. \\
-
-%Virtual Machine/Containerlösung: Zuerst Docker, dann Vagrant, weil schwierig unter Windows einzurichten. BootToDocker sollte auf Windows laufen, war allerdings kaputt und lief unter Windows nicht. Weitere Probleme wurden erwartet. Deswegen Wechsel zu Vagrant.
-%MUFI-Keyboard: Franz hat zuerst eine Eingabemaske dafür entwickelt. Allerdings ist es schwierig zu organisieren, da MUFI unglaublich viele Symbole hat. Eine günstigere Organisierung war notwendig. Wechsel der Technik war schwierig zu planen. MUFI-Symbole waren vorher in MUFI-vorgegebenen Kategorien organisiert, diese machten keinen Sinn für die Eingabemaske. Eigene Kategorisierung der Symbole wurde notwendig. Die substrings der Description eines Zeichens wurden als Tags verwendet. Diese wurden mittels Bucket-Sort organisiert und bessere Kategorien entstanden.
+In diesem Abschnitt möchten wir den Ablauf unseres Projektes
+von den ersten Treffen bis hin zum finalen Stand berichten.
+Dass nicht immer alles planmäßig verläuft liegt in der Natur der Sache.
+Deswegen möchten wir die unterwegs aufgetretenen Probleme genauer betrachten,
+und unsere Entscheidungen und Abwägungen nachvollziehbar darlegen. \\
+Ausgehend von unseren bereits erwähnten Zielen waren wir zu Beginn in der Lage,
+notwendige Technologien abzuschätzen.
+Dabei legten wir viel Wert auf die Auslagerung von Funktionen auf Dienste,
+welche die benötigte Funktionalität bereits implementiert haben
+und zur Verfügung stellen und stellten fest,
+welche Frameworks und Sprachen wir benötigen würden.
+Danach legten wir die groben Entwicklungsetappen fest,
+welche bereits in Form unserer drei Meilensteine unter Punkt 3.1. Erwähnung fanden.
+Die Meilensteine hatten allerdings nicht von Anfang an diese Form.
+Nur den ersten Meilenstein konnten wir zu diesem Zeitpunkt bereits klar abgrenzen.
+Uns war klar, dass auch mindestens ein zweiter Meilenstein von Nöten wäre.
+Dieser hatte zu diesem Zeitpunkt allerdings kaum konkrete Ziele,
+und die Entstehung eines dritten Meilensteines war zu
+diesem Zeitpunkt weder angedacht noch ausgeschlossen worden.
+Zwischenzeitlich wurde sogar ein vierter Meilenstein geplant,
+doch unser erster Meilenstein erfüllte letzten Endes mehr Anforderungen als geplant,
+so dass sich die Planung nach hinten wieder anders gestaltete.
+Wir wussten zu Beginn,
+dass die Scans auf einem Fileserver liegen,
+was aus rechtlichen Gründen aber nicht so bleiben sollte.
+An diesem Punkt gab es noch keine konkrete Antwort auf die Frage,
+von wo wir die Bilder beziehen,
+und wie wir entsprechend darauf zugreifen könnten.
+Außerdem waren wir uns schon einig, dass wir,
+in Anlehnung an das Homer-Multitext-Projekt,
+ebenfalls Areas of Interest verwenden möchten,
+welche im dortigen Projekt als ,,Regions of Interest'' bezeichnet werden.
+Wir waren uns auch einig,
+dass Rechtecke die optimale Form wären,
+um diese Regionen zu markieren,
+wussten nur noch nicht mit Sicherheit,
+in welcher Form wir diese Umsetzen und abspeichern sollten.
+Unser Favorit war die Variante,
+dass Rechtecke nur parallel zu den Seiten verlaufen könnten und man lediglich zwei Punkte,
+oder einen Punkt sowie Höhe und Breite abspeichern müsste.
+Nach kurzer Bedenkzeit entschieden wir uns für die zuletzt genannte Variante.
+Außerdem waren wir schon zu Beginn darüber im Bilde,
+dass Nutzer sich in irgendeiner Form Registrieren können sollten,
+und dass dies eine Voraussetzung wäre,
+um auf die Daten zugreifen zu können.
+Deswegen war die Login-Routine eine der ersten beschlossenen Funktionen.
+Außerdem war ebenfalls klar,
+dass Arbeit nur im eingeloggten Zustand verrichtet werden darf. \\
+Eine Woche später kam Omeka als Server für unsere Bilddateien ins Gespräch.
+Dort sollten wir einen Contributor-Nutzerzugang bekommen,
+um über diesen Zugang zu den Scans zu erhalten.
+Schnell stellte sich auch die Frage,
+ob wir ein Omeka-Plugin bauen müssten,
+oder ob es hierfür bereits implementierte Instrumente gäbe,
+deren Verwendung für uns in Frage kommt.
+Noch am selben Tag entschlossen wir uns dazu,
+für die Anmeldung einen Authentication Provider zu verwenden. \\
+Am 19. Juni gab es das nächste Zusammenkommen.
+Dort diskutierten wir,
+welche Informationen wir von Omeka beziehen müssten.
+Unsere Antwort darauf bestand aus Items sowie Metadaten.
+Dazu gehören unter anderem auch Copyrights und die Sammlungen,
+zu denen die jeweiligen Scans gehören. Wir entschieden uns,
+mit den Tags ,,Public'' und ,,Featured'' so zu verfahren,
+das erstere auch nicht eingeloggten Nutzern auf unserer Plattform angezeigt werden dürften,
+während Featured Scans lediglich für eingeloggte Nutzer angezeigt werden dürften.
+Scans, die weder Featured noch Public Tags aufweisen,
+würden wir behandeln, als existierten sie nicht,
+und sie entsprechend auch keinem Nutzer anzeigen.
+Für unsere Datenbank entschieden wir,
+dass alles mögliche einen Zeitstempel aufweisen dürfte,
+und es demnach auch tun sollte. Außerdem entschieden wir,
+dass wir unsere um die Area of Interest erweiterten
+Cite URNs zusätzlich hinten um den Nutzernamen,
+einen Zeitstempel, sowie die Endung ,,.md'' erweitern wollen.
+Zu diesem Zeitpunkt legten wir unseren ersten Meilenstein auf
+Github an und hakten bereits die Issues der ersten Phase als erledigt ab.
+Dazu gehörten die Mockups der Datenbank,
+des Interfaces sowie des Omeka Service Providers.
+Auch der Registrationsprozess gehörte dazu,
+während wir hier noch überlegten,
+wie wir vermeiden könnten,
+Passwörter auf unserer eigenen Datenbank abspeichern zu müssen. \\
+Am 24. Juni war der Stand unserer Arbeit so,
+dass wir bereits Scans aus Omeka lesen und diese,
+sowie entsprechende Thumbnails,
+anzeigen konnten.
+Am selben Tag begannen wir damit,
+das bereits vorgestellte ER-Diagramm für die Datenbank anzulegen.
+Wir klärten auch ab,
+dass Nutzer die Möglichkeit haben sollten,
+die Interest Maps anderer Nutzer editieren zu können.
+Das editierte Ergebnis sollte als neue Interest Map abgespeichert werden,
+anstatt das Original zu überschreiben.
+Eine Frage,
+zu diesem Datum ungeklärte Frage befasste sich damit,
+ob wir eine Referenzkette bilden sollten,
+welche es möglich macht,
+die Bearbeitungsgeschichte zurück zu verfolgen. \\
+Schon am 26. Juni gab es ein nächstes Treffen.
+Um uns allen ein laufendes Setup einzurichten,
+versuchten wir,
+Docker unter Windows bei Oliver einzurichten.
+Dazu gibt es Boot2Docker,
+welches explizit unter Windows funktionieren soll,
+jedoch funktionierte dieser Ansatz nicht,
+da das Setup möglicherweise kaputt war - so unser Verständnis davon.
+Man hätte auch in der laufenden Arbeit weitere Probleme erwarten müssen,
+weswegen wir den Kurs änderten und versuchten,
+ein Ubuntu in einer VirtualBox einzurichten,
+damit wir eine Ausweichmöglichkeit hätten.
+Das Setup nahm jedoch einige Zeit in Anspruch und wurde nicht mehr am selben Tag fertig.
+Zeitgleich arbeitete sich Robert weiter in Bootstrap und PHP
+ein und es entstand in weiteren Überlegungen ein Tafelbild,
+welches als Grundlage für die oben gezeigte Komponentengrafik fungierte,
+welche wir mit Yed erstellten. \\
+Am 1. Juli kamen wir wieder zusammen.
+Im gespräch mit Thomas wurden wir für unser Setupproblem auf Vagrant aufmerksam
+gemacht und setzten uns auch direkt an die Umsetzung dieses Lösungsansatzes.
+Vor allem sollte es unter Windows besser laufen.
+Jakob war von Vagrant nicht hundertprozentig überzeugt und überlegte,
+inwiefern wir uns noch Docker zunutze machen könnten,
+wir wurden jedoch gebeten,
+Vagrant eine Chance zu geben und haben es entsprechend umgesetzt.
+Die Überlegung,
+Docker weiterhin zur Provisionierung einzusetzen,
+war trotzdem da.
+Zudem kam ins Gespräch,
+dass es von Vorteil wäre,
+Markdown auf Github speichern zu können.
+In diesem Zuge wurde uns auch gesagt,
+dass wir die MUFI-Symbole nicht pur benutzen sollten,
+sondern nur jene,
+die auch in UTF-8 enthalten seien.
+Zuletzt beschäftigten wir uns mit unseren Bilddateien.
+Wir wurden darüber informiert,
+dass ein Bilderproxy nicht teil unseres Systems sein muss.
+Uns wurden zwei Werkzeuge vorgeschlagen,
+welche Funktionalitäten besitzen,
+die wir möglicherweise gut für all das gebrauchen könnten,
+was wir auf unserem System mit Bilddateien machen können müssen.
+Namentlich sind das ,,OpenSeadragon'' und ,,iiif''. \\
+Bei unserem Treffen am 3. Juli schafften wir es,
+Vagrant bei Oliver zum laufen zu bringen und so
+ein funktionierendes Setup unter Windows aufzubauen.
+Wir hatten unsere Zweifel,
+jedoch wäre es ohne Vagrant noch viel komplizierter gewesen.
+Die Sorge,
+dass Vagrant an anderen Stellen noch Probleme machen könnte,
+bleibt jedoch.
+Robert hat am selben Tag ein Mockup fertiggestellt,
+in welchem Zooming und Panning möglich sind und eine Drawbox zu sehen ist.
+Danach widmeten wir uns wieder unterschiedlichen, kleinen,
+technischen Aufgaben und Bugs, während Oliver versuchte,
+die aus dem Mockup ersichtlich werdenden Anforderungen
+einmal in einem kleinen Dokument zu erfassen.
+Da das Mockup das an diesem Tag entstand dieselbe Version ist,
+die auch momentan noch in unserem Code zu finden ist,
+in der das Markieren von Areas of Interests und das
+Füllen derer Informationsboxen im gleichen Prozess geschieht,
+ging es in dem Dokument weitestgehend um Ideen zur
+Trennung dieser zwei Mechhanismen in eigenständige Aufgaben. \\
+Am 8. Juli beschlossen wir,
+Transkriptionen bei Konsens auf Github zu stellen.
+Die URNs sollten dabei als Dateinamen dienen.
+Beteiligte Nutzer sollen im Commit erwähnt werden.
+Das betrifft all jene,
+welche die Transkription erstellt,
+oder sie abgesegnet haben.
+Thomas Gedanke dazu ist,
+dass es zur Absicherung einer fertigen Transkription reicht,
+wenn fünf Nutzer meinen,
+alles wäre korrekt,
+oder wenn dies von einem Admin bestätigt wird.
+Für uns ergibt sich daraus die Anforderung,
+einen isAdmin-Flag in die Nutzerbasis einzubauen.
+Es gab auch Überlegungen zum Motivationssystem,
+wodurch ins Gespräch kam,
+dass Nutzer mit einer gewissen Anzahl an fertiggestellten
+Tasks ebenfalls wie Administratoren gewertet werden könnten.
+Auch CTS URNs wurden uns für unsere Scans zugänglich gemacht.
+Wir überlegten,
+wie wir uns diese in Omeka zunutze machen könnten
+und dachten dabei an Dublin Core und Google Fusion.
+Zusätzlich kam die Idee auf,
+die Dateinamen zu diesen URNs hinzuzufügen,
+um die Erkennung unserer Inhalte zu erleichtern.
+Dann besprachen wir Baustellen für unseren nächsten Meilenstein,
+konnten zu diesem Zeitpunkt jedoch nur das abspeichern von Areas of Interests,
+sowie ein Bewertungssystem von Interest Maps und eine Eingabemaske für MUFI-Symbole festmachen.
+Noch wussten wir auch nicht,
+wie wir den Nutzern Scans anbieten sollten.
+Die erste Idee war es,
+sowohl eine Möglichkeit zur gezielten suche nach Scans einzubauen,
+sowie auch eine Möglichkeit,
+einen zufälligen Scan zur Arbeit gegeben zu bekommen. \\
+Am 10. Juli haben wir viele Entscheidungen zusammen mit Thomas und Christine getroffen.
+Zuerst kam der Vorschlag,
+mehrere Kategorien für unsere Areas of Interest zu machen.
+Folgende Kategorien sind daraufhin Fazit entstanden:
+,,Main Text'', ,,Marginal Text'', ,,Image'', ,,Mathematical Figure'',
+,,Other (Freetext description)'', ,,Initials'' und ,,Title''.
+Auch wurde zu bedenken gegeben,
+dass es Sätze geben kann,
+die sich über mehrere Scans überspannen.
+Daher sollte es möglich gemacht werden,
+Areas of Interest über mehrere Scans hinweg zu markieren,
+und ein entsprechendes Feature zu implementieren,
+welches das Blättern ermöglicht.
+Wir dachten uns dazu,
+dass es ausreichen müsste, vom Scan, um den es geht,
+jeweils nur eine Seite vorwärts oder rückwärts blättern zu können.
+Außerdem stellten wir fest,
+dass eine Fehlerbehandlung nötig werden könnte,
+falls URNs eine länge von 250 Zeichen überschreiten.
+Deswegen müssen wir dies immer dann überprüfen,
+wenn eine URN erstellt oder verändert wird.
+Wir haben auch darn übereingestimmt,
+dass im Tutorial darauf hingewiesen werden sollte,
+dass Areas of Interest so sparsam wie möglich eingesetzt werden,
+und nur so viele gezogen werden,
+wie unbedingt nötig ist.
+Am Ende der Sitzung erstellten wir noch Schemata für unsere URNs.
+Weiterhin möchten wir unter anderem Metadaten aus
+Dublin Core in unsere Transkriptionsansicht übernehmen.
+Außerdem beschlossen wir,
+dass es in Ordnung wäre,
+unsere Authentifikation für den moment auf Github zu beschränken.
+Möglicherweise wird es im Rahmen unseres Projektes auch dabei bleiben.
+Weiterhin wäre es gut,
+ein MUFI-Keyboard direkt unter der Markdowneingabe einzusetzen.
+Es könnte außerdem ein Live-Rendering von Markdown möglich gemacht werden,
+sofern wir dies in einem eigenen Tab innerhalb unserer Seite realisieren können.
+Es wurde beschlossen für die Größe der Rechtecke mit Percentages und Doubles zu arbeiten,
+da diese im Gegensatz zu Pixelzahlen mit der Bildgröße skaliert werden können.
+Und wir haben festgelegt,
+dass immer wenn ein Nutzer Markdown auf Github exportiert,
+soll darauf ein automatisch generiertes Preface existieren,
+welches einen Link auf das Profil des Autoren,
+inklusive Nutzernamen,
+einen Link auf die Transkription über ihre URN,
+sowie weitere Daten zur Transkription enthält.
+Außerdem ist erwähnenswert,
+dass auch Robert seit unserem Wechsel zu Vagrant an
+diesem Tag wieder ein Setup zum laufen bekommen hat.
+Der Stand unseres Projektes an diesem Tag hat damit
+den Bestand für unseren ersten Meilenstein erfüllt. \\
+Unser vorerst letztes geregeltes Treffen fand am
+15. Juli mit dem Ende der Vorlesungszeit statt.
+Wir besprachen an diesem Datum nicht viel,
+nennenswert ist nur,
+dass wir testen müssten,
+ob es ausreichen würde,
+TIFF-Dateien im Browser anzuzeigen,
+oder wir diese in ein anderes Datenformat konvertieren müssten. \\
+Eine Sache,
+die später noch zu Problemen führte,
+war die Gestaltung des MUFI-Keyboards.
+Es gab an einem Punkt eine Eingabemaske,
+welche sich an MUFIs Kategorisierung der Symbole orientierte.
+Da MUFI jedoch eine gewaltige Symbolauswahl hat und sich dessen Kategorien an
+keiner praktischen Form für die Auswahl von Symbolen im Schriftfluss orientiert,
+war diese variante sehr ungeeignet.
+Eine bessere Organisierung wurde notwendig,
+doch ein Wechsel der Technik war schwierig zu planen.
+Unsere neue Lösung bestand darin,
+die von MUFI vorgegebenen Kategorien aufzubrechen
+und eine neue Kategorisierung zu schaffen,
+die sich eher an Symbolähnlichkeit und Eingabefreundlichkeit orientierte.
+Dazu nutzten wir die einzelnen Wörter in den
+Beschreibungsfeldern der einzelnen Zeichen als Tags.
+Diese wurden dann mittels Bucket-Sort organisiert
+und somit entstand die neue Kategorieform,
+welche sich als viel Nutzerfreundlicher erwies. \\
+%***An diesem Punkt hören die Notes von Jakob auf.
+%Ich weiß nicht, was seither alles passiert ist.
+%Ich erinnere mich noch an weitere Vagrant-Probleme?
+%Hier muss eventuell noch mit eurer Hilfe nachgebessert werden***
+*** The End? ***
 
 \subsection{Aktueller Stand des Projektes}
 
